FINN folder: update latest exp: BED evol, ONNX modify and prune, MobilenetV2 variations: 4bitINP, 224sparse, 160, 112

--- a/finn/notebooks/uav_finn/classification/my_mblnet_resnet_onnx_modify/eval_qonnx_pruned.ipynb
+++ b/finn/notebooks/uav_finn/classification/my_mblnet_resnet_onnx_modify/eval_qonnx_pruned.ipynb
@@ -9,7 +9,7 @@
    "source": [
     "import numpy as np\n",
     "\n",
-    "from finn.util.visualization import showInNetron\n",
+    "# from finn.util.visualization import showInNetron\n",
     "\n",
     "from qonnx.util.cleanup import cleanup as qonnx_cleanup\n",
     "from qonnx.core.modelwrapper import ModelWrapper\n",
@@ -35,72 +35,52 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# ori_filename = 'BED_classifier__best_mean_F1__QONNX.onnx'\n",
-    "# ori_bipolar_filename = 'MY_MBLNET_V2_RESNET_classifier__best_mean_F1__BIPOLAR_Out__QONNX.onnx'\n",
+    "# ori_bipolar_filename = './manual_prune/20_prune_easy_convs.onnx'\n",
     "\n",
-    "ori_bipolar_filename = './onnx_models/MobileNetV2_Mini_Resnet__manual_zero_1e-5__best_F1__Bipolar.onnx'"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "id": "5cce6941-b0db-4c0a-84dc-024808e5f1df",
-   "metadata": {},
-   "source": [
-    "### Original Model: cleaned"
+    "# ori_bipolar_filename = './manual_prune/20_prune_all_convs.onnx'\n",
+    "\n",
+    "# ori_bipolar_filename = './manual_pruning/mul4/30_prune_all_convs_no_mul4.onnx'\n",
+    "\n",
+    "# ori_bipolar_filename = './manual_pruning/mul4_and_scales/30_prune_all_convs_no_mul4_scalemin.onnx'\n",
+    "\n",
+    "# ori_bipolar_filename = './manual_pruning/mul4_and_scales/20_prune_all_convs_mul4_scalemin.onnx'\n",
+    "\n",
+    "# ori_bipolar_filename = './onnx_models/20_prune_all_convs_mul8_scale_zeroidx.onnx'\n",
+    "\n",
+    "# ori_bipolar_filename = './onnx_models/prune_all_convs_only_thres.onnx'\n",
+    "\n",
+    "# ori_bipolar_filename = './manual_pruning/pruning/sparse24_mul8/20_prune_all_convs_mul8.onnx'\n",
+    "\n",
+    "ori_bipolar_filename = './onnx_models/Mobilenetv2_Mini_Resnet_Sparse24__best_F1__Bipolar.onnx'"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": 3,
-   "id": "2c265445-b6b1-4630-b50c-760ad4f46481",
+   "id": "33f4733c-abfd-44e2-8e12-048c2443b905",
    "metadata": {},
    "outputs": [],
    "source": [
-    "# ori_cleaned_filename = \"Best_ori_cleaned.onnx\"\n",
-    "ori_bipolar_cleaned_filename = \"./onnx_models/zero_1e-5_cleaned.onnx\"\n",
-    "\n",
-    "# qonnx_cleanup(ori_filename, out_file= ori_cleaned_filename)\n",
-    "qonnx_cleanup(ori_bipolar_filename, out_file= ori_bipolar_cleaned_filename)"
+    "# showInNetron(ori_bipolar_filename)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "b4ea156f-6a8a-42b8-beda-6cf68fd1ec68",
+   "metadata": {},
+   "source": [
+    "# Clean Model First"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": 4,
-   "id": "33f4733c-abfd-44e2-8e12-048c2443b905",
+   "id": "a5ad1e69-ffbc-4d48-89bd-d6f1d34d67a6",
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Serving './onnx_models/zero_1e-5_cleaned.onnx' at http://0.0.0.0:8083\n"
-     ]
-    },
-    {
-     "data": {
-      "text/html": [
-       "\n",
-       "        <iframe\n",
-       "            width=\"100%\"\n",
-       "            height=\"400\"\n",
-       "            src=\"http://localhost:8083/\"\n",
-       "            frameborder=\"0\"\n",
-       "            allowfullscreen\n",
-       "            \n",
-       "        ></iframe>\n",
-       "        "
-      ],
-      "text/plain": [
-       "<IPython.lib.display.IFrame at 0x7f285c153070>"
-      ]
-     },
-     "execution_count": 4,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
-    "showInNetron(ori_bipolar_cleaned_filename)"
+    "# qonnx_clean_filename = './onnx_models/' + 'sparse24_clean_model.onnx'\n",
+    "# qonnx_cleanup(ori_bipolar_filename, out_file=qonnx_clean_filename)"
    ]
   },
   {
@@ -118,8 +98,9 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# ori_model = ModelWrapper(ori_cleaned_filename)\n",
-    "ori_bipolar_model = ModelWrapper(ori_bipolar_cleaned_filename)"
+    "ori_bipolar_model = ModelWrapper(ori_bipolar_filename)\n",
+    "\n",
+    "# ori_bipolar_model = ModelWrapper(qonnx_clean_filename)"
    ]
   },
   {
@@ -179,51 +160,6 @@
   },
   {
    "cell_type": "markdown",
-   "id": "ffb4b9e2-4aef-4f91-b5a2-b11fb11493d1",
-   "metadata": {},
-   "source": [
-    "### QONNX model exported in Brevitas after training"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 9,
-   "id": "6c477cbf-3322-482d-87e9-9aa1eb69b89f",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# import importlib\n",
-    "# importlib.reload(metrics)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 10,
-   "id": "2a55daaf-3188-4ab5-8458-1e15f931e786",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# ori_metrics = metrics.eval_quant_onnx(\n",
-    "#     imgs_list = IMGS_LIST,\n",
-    "#     labels_dir = DS_LABELS,\n",
-    "#     model_wrapped = ori_model,\n",
-    "#     bipolar=True,\n",
-    "#     divide_255=True) # Ori model does not have the preprocess included"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 11,
-   "id": "5332323a-34ed-43e2-b10d-182ec33d9607",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# ori_df = pd.DataFrame(ori_metrics)\n",
-    "# ori_df"
-   ]
-  },
-  {
-   "cell_type": "markdown",
    "id": "9261c8d4-de99-4239-9ea3-da13d24d103b",
    "metadata": {},
    "source": [
@@ -232,7 +168,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 9,
    "id": "08c1278d-d3df-4712-836c-cccad8ca3fb9",
    "metadata": {},
    "outputs": [
@@ -248,14 +184,14 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "Testing: 100%|███████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████| 30/30 [00:09<00:00,  3.28it/s]"
+      "Testing: 100%|███████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████| 30/30 [00:08<00:00,  3.42it/s]"
      ]
     },
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Smoke -> TP: 18.0, FP: 0.0, TN: 8.0, FN: 4.0\n",
+      "Smoke -> TP: 20.0, FP: 0.0, TN: 8.0, FN: 2.0\n",
       "Fire  -> TP: 11.0, FP: 0.0, TN: 19.0, FN: 0.0\n"
      ]
     },
@@ -278,7 +214,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 10,
    "id": "07028c86-0cba-4144-b337-db0a8b410b29",
    "metadata": {},
    "outputs": [
@@ -311,9 +247,9 @@
        "  <tbody>\n",
        "    <tr>\n",
        "      <th>Accuracy</th>\n",
-       "      <td>0.8667</td>\n",
+       "      <td>0.9333</td>\n",
        "      <td>1.0</td>\n",
-       "      <td>0.9334</td>\n",
+       "      <td>0.9666</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>Precision</th>\n",
@@ -323,15 +259,15 @@
        "    </tr>\n",
        "    <tr>\n",
        "      <th>Recall</th>\n",
-       "      <td>0.8182</td>\n",
-       "      <td>1.0</td>\n",
        "      <td>0.9091</td>\n",
+       "      <td>1.0</td>\n",
+       "      <td>0.9546</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>F1</th>\n",
-       "      <td>0.9000</td>\n",
+       "      <td>0.9524</td>\n",
        "      <td>1.0</td>\n",
-       "      <td>0.9500</td>\n",
+       "      <td>0.9762</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
@@ -339,13 +275,13 @@
       ],
       "text/plain": [
        "            Smoke  Fire    Mean\n",
-       "Accuracy   0.8667   1.0  0.9334\n",
+       "Accuracy   0.9333   1.0  0.9666\n",
        "Precision  1.0000   1.0  1.0000\n",
-       "Recall     0.8182   1.0  0.9091\n",
-       "F1         0.9000   1.0  0.9500"
+       "Recall     0.9091   1.0  0.9546\n",
+       "F1         0.9524   1.0  0.9762"
       ]
      },
-     "execution_count": 13,
+     "execution_count": 10,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -365,7 +301,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 11,
    "id": "7d20018d-eaa4-45d2-90f9-b8726413e170",
    "metadata": {},
    "outputs": [],
@@ -381,7 +317,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 12,
    "id": "4994f8f4-4669-4855-a5ef-07ff54085665",
    "metadata": {},
    "outputs": [],
@@ -391,7 +327,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 13,
    "id": "954e78b4-9a7d-4ff9-88d5-d4663d3d6fdf",
    "metadata": {},
    "outputs": [
@@ -401,7 +337,7 @@
        "4306"
       ]
      },
-     "execution_count": 16,
+     "execution_count": 13,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -420,7 +356,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 14,
    "id": "5154101a-f1fe-45d5-97bb-f2f75d61e51f",
    "metadata": {},
    "outputs": [
@@ -436,15 +372,15 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "Testing: 100%|███████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████| 4306/4306 [35:11<00:00,  2.04it/s]"
+      "Testing: 100%|███████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████| 4306/4306 [21:06<00:00,  3.40it/s]"
      ]
     },
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Smoke -> TP: 1891.0, FP: 154.0, TN: 2071.0, FN: 190.0\n",
-      "Fire  -> TP: 1056.0, FP: 61.0, TN: 3130.0, FN: 59.0\n"
+      "Smoke -> TP: 1811.0, FP: 116.0, TN: 2109.0, FN: 270.0\n",
+      "Fire  -> TP: 1047.0, FP: 53.0, TN: 3138.0, FN: 68.0\n"
      ]
     },
     {
@@ -466,7 +402,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 15,
    "id": "17e79835-84df-4b92-b8c1-159baa3e97c8",
    "metadata": {},
    "outputs": [
@@ -499,27 +435,27 @@
        "  <tbody>\n",
        "    <tr>\n",
        "      <th>Accuracy</th>\n",
-       "      <td>0.9201</td>\n",
-       "      <td>0.9721</td>\n",
-       "      <td>0.9461</td>\n",
+       "      <td>0.9104</td>\n",
+       "      <td>0.9719</td>\n",
+       "      <td>0.9412</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>Precision</th>\n",
-       "      <td>0.9247</td>\n",
-       "      <td>0.9454</td>\n",
-       "      <td>0.9350</td>\n",
+       "      <td>0.9398</td>\n",
+       "      <td>0.9518</td>\n",
+       "      <td>0.9458</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>Recall</th>\n",
-       "      <td>0.9087</td>\n",
-       "      <td>0.9471</td>\n",
-       "      <td>0.9279</td>\n",
+       "      <td>0.8703</td>\n",
+       "      <td>0.9390</td>\n",
+       "      <td>0.9046</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>F1</th>\n",
-       "      <td>0.9166</td>\n",
-       "      <td>0.9462</td>\n",
-       "      <td>0.9314</td>\n",
+       "      <td>0.9037</td>\n",
+       "      <td>0.9454</td>\n",
+       "      <td>0.9246</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
@@ -527,13 +463,13 @@
       ],
       "text/plain": [
        "            Smoke    Fire    Mean\n",
-       "Accuracy   0.9201  0.9721  0.9461\n",
-       "Precision  0.9247  0.9454  0.9350\n",
-       "Recall     0.9087  0.9471  0.9279\n",
-       "F1         0.9166  0.9462  0.9314"
+       "Accuracy   0.9104  0.9719  0.9412\n",
+       "Precision  0.9398  0.9518  0.9458\n",
+       "Recall     0.8703  0.9390  0.9046\n",
+       "F1         0.9037  0.9454  0.9246"
       ]
      },
-     "execution_count": 18,
+     "execution_count": 15,
      "metadata": {},
      "output_type": "execute_result"
     }
