--- a/finn/notebooks/uav_finn/classification/my_mblnet_resnet_to_finn_driver/finn__build_config_pynq_z1.ipynb
+++ b/finn/notebooks/uav_finn/classification/my_mblnet_resnet_to_finn_driver/finn__build_config_pynq_z1.ipynb
@@ -10,7 +10,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Run folder created in: experiments_CLK/30_FPS_CLK_200ns/03_full_build_final_mvau_hls/\n"
+      "Run folder created in: experiments/z_1000_FPS/17_full_build_json_mvau_rtl_mvau_wwidth_max_36_manual_folding_exp13/\n"
      ]
     }
    ],
@@ -72,7 +72,11 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "brevitas_cpu = './MY_MBLNET_V2_RESNET_classifier__best_mean_F1__BIPOLAR_Out__QONNX.onnx'"
+    "brevitas_cpu = './onnx_models/MY_MBLNET_V2_RESNET_classifier__best_mean_F1__BIPOLAR_Out__QONNX.onnx'\n",
+    "\n",
+    "# brevitas_cpu = './onnx_models/Mobilenetv2_Original__Bipolar.onnx'\n",
+    "\n",
+    "# brevitas_cpu = './onnx_models/MobileNetV2_Mini_Resnet__manual_zero_1e-5__best_F1__Bipolar.onnx'"
    ]
   },
   {
@@ -402,12 +406,16 @@
    "outputs": [],
    "source": [
     "ALL_HLS = False\n",
-    "ALL_RTL = False\n",
+    "ALL_RTL = True\n",
     "\n",
     "if ALL_HLS:\n",
-    "    MVAU_list = [i for i in range(22)] # All Nodes should be here. 22 MVAU in MobilenetV2 Resnet\n",
+    "    MVAU_list = [] # Empty, so no nodes are kept in RTL. 22 MVAU in MobilenetV2 Resnet\n",
     "else:\n",
-    "    MVAU_list = [i for i in range(15)] # Nodes to keep in RTL"
+    "    # MVAU_list = [i for i in range(16)] # Nodes to keep in RTL\n",
+    "    MVAU_list = [i for i in range(13)] # Nodes to keep in RTL\n",
+    "\n",
+    "    # For MobilenetV2 Original\n",
+    "    # MVAU_list = [i for i in range(20)] # Nodes to keep in RTL"
    ]
   },
   {
@@ -425,7 +433,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "VVAU_DSP_list = []"
+    "VVAU_DSP_list = [] # If empty, no VVAUs to DSP"
    ]
   },
   {
@@ -449,6 +457,24 @@
   },
   {
    "cell_type": "markdown",
+   "id": "f255401f-a4ac-4a45-bc17-18a224965f76",
+   "metadata": {},
+   "source": [
+    "# Padding to RTL"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 19,
+   "id": "87a704af-ce4e-4872-93da-8656602db12b",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "padding_rtl = False"
+   ]
+  },
+  {
+   "cell_type": "markdown",
    "id": "270295cd-a9f9-4f32-9a0b-fed3ab4812d9",
    "metadata": {},
    "source": [
@@ -457,7 +483,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 20,
    "id": "dea630ea-7a8b-4e7f-9949-ccad43f8cf23",
    "metadata": {},
    "outputs": [],
@@ -468,7 +494,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 21,
    "id": "13763a14-479e-4672-9e87-85d0eb4d62ba",
    "metadata": {},
    "outputs": [],
@@ -477,11 +503,12 @@
     "    \n",
     "    # Change all FMPadding to HLS, as Folding does not support this layer as RTL\n",
     "    # It does not hurt if Padding is not present, as it will do nothing\n",
-    "    FMPadding_node = model.get_nodes_by_op_type(\"FMPadding\")\n",
-    "    for node in FMPadding_node:\n",
-    "        node_inst = getCustomOp(node)\n",
-    "        node_inst.set_nodeattr(\"preferred_impl_style\", \"hls\")\n",
-    "        print(f'Node {node.name} forced to HLS')\n",
+    "    if not padding_rtl:\n",
+    "        FMPadding_node = model.get_nodes_by_op_type(\"FMPadding\")\n",
+    "        for node in FMPadding_node:\n",
+    "            node_inst = getCustomOp(node)\n",
+    "            node_inst.set_nodeattr(\"preferred_impl_style\", \"hls\")\n",
+    "            print(f'Node {node.name} forced to HLS')\n",
     "\n",
     "    # MVAUs in the list are kept like RTL. All other layers are converted to HLS\n",
     "    if ALL_RTL == False:\n",
@@ -561,7 +588,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 22,
    "id": "2e0f8bb0-51c8-48c9-aedf-037a2a0f3688",
    "metadata": {},
    "outputs": [],
@@ -572,7 +599,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 23,
    "id": "0c207e43-1605-4e93-9005-e6183f107552",
    "metadata": {},
    "outputs": [
@@ -670,7 +697,7 @@
        "9   KV260_SOM    xck26-sfvc784-2LV-c"
       ]
      },
-     "execution_count": 22,
+     "execution_count": 23,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -682,7 +709,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 24,
    "id": "b64e5853-8786-4504-b41a-458f5da34c90",
    "metadata": {},
    "outputs": [],
@@ -694,7 +721,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 25,
    "id": "e4069398-ce9f-4ea4-a067-7260ba425585",
    "metadata": {},
    "outputs": [
@@ -712,7 +739,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": 26,
    "id": "9b6e7598-c2e8-45e3-b141-75b076c53ae2",
    "metadata": {},
    "outputs": [
@@ -720,7 +747,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "experiments_CLK/30_FPS_CLK_200ns/03_full_build_final_mvau_hls/clean_model.onnx\n"
+      "experiments/z_1000_FPS/17_full_build_json_mvau_rtl_mvau_wwidth_max_36_manual_folding_exp13/clean_model.onnx\n"
      ]
     }
    ],
@@ -739,26 +766,26 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": null,
    "id": "e10a8c99-c5a3-49fc-a692-4c53beb01de6",
    "metadata": {},
    "outputs": [],
    "source": [
-    "my_synth_clk_period_ns = 200\n",
+    "my_synth_clk_period_ns = 250\n",
     "my_target_fps = 30\n",
-    "my_mvau_wwidth_max = 10000 # \n",
+    "my_mvau_wwidth_max = 16 #20 #16 # 12 # 80 # 36 # 10000 # \n",
     "my_default_swg_exception = True\n",
     "my_standalone_thresholds = True\n",
     "my_auto_fifo_depths = True\n",
     "my_auto_fifo_strategy = \"largefifo_rtlsim\" # \"characterize\"\n",
     "my_split_large_fifos = True\n",
-    "my_folding_config_file = None #config.RUN_FOLDER + 'final_hw_config_01_experiment.json'\n",
+    "my_folding_config_file = './experiments/750_FPS/manual_folding_750FPS.json'\n",
     "my_specialize_layers_config_file = None"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 27,
+   "execution_count": 28,
    "id": "fb90284e-346a-4f98-881d-75aea0b3a774",
    "metadata": {},
    "outputs": [],
@@ -767,6 +794,8 @@
     "    (my_auto_fifo_depths and my_folding_config_file is None)\n",
     "    or\n",
     "    (not my_auto_fifo_depths and my_folding_config_file is not None)\n",
+    "    or\n",
+    "    (my_auto_fifo_depths and my_folding_config_file is not None)\n",
     ")       "
    ]
   },
@@ -780,7 +809,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 28,
+   "execution_count": 29,
    "id": "3392e878-1927-4360-8d58-75402552e991",
    "metadata": {},
    "outputs": [],
@@ -790,7 +819,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 29,
+   "execution_count": 30,
    "id": "66c7d74d-229d-44e8-a0c4-35bb38951a23",
    "metadata": {},
    "outputs": [
@@ -798,7 +827,8 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Folder does not exist and it will be created\n"
+      "Folder does not exist and it will be created\n",
+      "Using folding config file -> NO step_target_fps_parallelization\n"
      ]
     }
    ],
@@ -812,18 +842,33 @@
     "else:\n",
     "    print(\"Folder does not exist and it will be created\")\n",
     "\n",
-    "my_estimate_steps = [\n",
-    "    custom_step_tidy_up,\n",
-    "    custom_step_add_pre_proc,\n",
-    "    custom_step_streamline,\n",
-    "    custom_step_convert_to_hw,\n",
-    "    \"step_create_dataflow_partition\",\n",
-    "    custom_step_specialize_layers,\n",
-    "    \"step_target_fps_parallelization\",\n",
-    "    \"step_apply_folding_config\",\n",
-    "    \"step_minimize_bit_width\",\n",
-    "    \"step_generate_estimate_reports\",\n",
-    "]\n",
+    "if my_folding_config_file is None:\n",
+    "    print(\"Not using folding config file -> step_target_fps_parallelization\")\n",
+    "    my_estimate_steps = [\n",
+    "        custom_step_tidy_up,\n",
+    "        custom_step_add_pre_proc,\n",
+    "        custom_step_streamline,\n",
+    "        custom_step_convert_to_hw,\n",
+    "        \"step_create_dataflow_partition\",\n",
+    "        custom_step_specialize_layers,\n",
+    "        \"step_target_fps_parallelization\",\n",
+    "        \"step_apply_folding_config\",\n",
+    "        \"step_minimize_bit_width\",\n",
+    "        \"step_generate_estimate_reports\",\n",
+    "    ]\n",
+    "else:\n",
+    "    print(\"Using folding config file -> NO step_target_fps_parallelization\")\n",
+    "    my_estimate_steps = [\n",
+    "        custom_step_tidy_up,\n",
+    "        custom_step_add_pre_proc,\n",
+    "        custom_step_streamline,\n",
+    "        custom_step_convert_to_hw,\n",
+    "        \"step_create_dataflow_partition\",\n",
+    "        custom_step_specialize_layers,\n",
+    "        \"step_apply_folding_config\",\n",
+    "        \"step_minimize_bit_width\",\n",
+    "        \"step_generate_estimate_reports\",\n",
+    "    ]\n",
     "\n",
     "cfg_estimates = build.DataflowBuildConfig(\n",
     "    output_dir                    = estimates_output_dir,\n",
@@ -841,6 +886,7 @@
     "\n",
     "    steps                         = my_estimate_steps,\n",
     "    #specialize_layers_config_file = my_specialize_layers_config_file,\n",
+    "    folding_config_file           = my_folding_config_file,\n",
     "    generate_outputs=[\n",
     "        build_cfg.DataflowOutputType.ESTIMATE_REPORTS,\n",
     "    ],\n",
@@ -857,7 +903,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 30,
+   "execution_count": 31,
    "id": "22a981b1-30b2-4d29-962e-3f218d4d2385",
    "metadata": {},
    "outputs": [
@@ -939,7 +985,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 31,
+   "execution_count": 32,
    "id": "7b3df90f-5990-4067-972f-45b2cd306eb0",
    "metadata": {},
    "outputs": [
@@ -968,7 +1014,7 @@
     "    custom_step_convert_to_hw,\n",
     "    \"step_create_dataflow_partition\",\n",
     "    custom_step_specialize_layers,\n",
-    "    \"step_target_fps_parallelization\",\n",
+    "    #\"step_target_fps_parallelization\", # REMOVE this STEP, as folding file will be used\n",
     "    \"step_apply_folding_config\",\n",
     "    \"step_minimize_bit_width\",\n",
     "    \"step_generate_estimate_reports\",\n",
@@ -985,8 +1031,8 @@
     "\n",
     "cfg_full_build_json_folding = build.DataflowBuildConfig(\n",
     "    output_dir                    = full_build_output_dir,\n",
-    "    #mvau_wwidth_max               = my_mvau_wwidth_max, #36,\n",
-    "    #target_fps                    = my_target_fps,\n",
+    "    mvau_wwidth_max               = my_mvau_wwidth_max, \n",
+    "    target_fps                    = my_target_fps,\n",
     "    synth_clk_period_ns           = my_synth_clk_period_ns, #10.0,\n",
     "    board                         = pynq_board,\n",
     "    fpga_part                     = fpga_part,\n",
@@ -1021,7 +1067,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 32,
+   "execution_count": null,
    "id": "8e829246-2713-4d35-aa94-c0feb1980202",
    "metadata": {},
    "outputs": [
@@ -1029,14 +1075,14 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Perform: full_build\n"
+      "Perform: full_build_json_folding\n"
      ]
     }
    ],
    "source": [
     "# flow_config = \"estimates\"\n",
-    "flow_config = \"full_build\"\n",
-    "# flow_config = \"full_build_json_folding\"\n",
+    "# flow_config = \"full_build\"\n",
+    "flow_config = \"full_build_json_folding\"\n",
     "\n",
     "if flow_config == \"estimates\":\n",
     "    current_build_config = cfg_estimates\n",
@@ -1060,7 +1106,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 33,
+   "execution_count": 34,
    "id": "2b61950e-3fcd-4651-a303-677253306201",
    "metadata": {},
    "outputs": [],
@@ -1076,6 +1122,7 @@
     "            f'\\tVVAU list to DSP: {VVAU_DSP_list}.\\n'+\n",
     "            f'\\tAll ConvInputGen to BRAM: {all_CONV_INP_GEN_bram}.\\n'+\n",
     "            f'\\tConvInputGen list: {CONV_INP_GEN_list}.\\n'+\n",
+    "            f'\\tPadding to RTL: {padding_rtl}.\\n'+\n",
     "            f'\\tDefault sliding window exception: {my_default_swg_exception}.\\n'+ \n",
     "            f'\\tAuto FIFO depth: {my_auto_fifo_depths}.\\n'+ \n",
     "            f'\\tAuto FIFO strategy: {my_auto_fifo_strategy}.\\n'+ \n",
@@ -1095,7 +1142,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 35,
    "id": "400add5d-a3a9-4dd6-9c1f-ccd173d2e71d",
    "metadata": {},
    "outputs": [
@@ -1103,24 +1150,83 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Building dataflow accelerator from experiments_CLK/30_FPS_CLK_200ns/03_full_build_final_mvau_hls/clean_model.onnx\n",
+      "Building dataflow accelerator from experiments/z_1000_FPS/17_full_build_json_mvau_rtl_mvau_wwidth_max_36_manual_folding_exp13/clean_model.onnx\n",
       "Intermediate outputs will be generated in /home/gmoreno/workspace\n",
-      "Final outputs will be generated in experiments_CLK/30_FPS_CLK_200ns/03_full_build_final_mvau_hls/output_full_build\n",
-      "Build log is at experiments_CLK/30_FPS_CLK_200ns/03_full_build_final_mvau_hls/output_full_build/build_dataflow.log\n",
-      "Running step: custom_step_tidy_up [1/19]\n",
-      "Running step: custom_step_add_pre_proc [2/19]\n",
-      "Running step: custom_step_streamline [3/19]\n",
-      "Running step: custom_step_convert_to_hw [4/19]\n",
-      "Running step: step_create_dataflow_partition [5/19]\n",
-      "Running step: custom_step_specialize_layers [6/19]\n",
-      "Running step: step_target_fps_parallelization [7/19]\n",
-      "Running step: step_apply_folding_config [8/19]\n",
-      "Running step: step_minimize_bit_width [9/19]\n",
-      "Running step: step_generate_estimate_reports [10/19]\n",
-      "Running step: step_hw_codegen [11/19]\n",
-      "Running step: step_hw_ipgen [12/19]\n",
-      "Running step: step_set_fifo_depths [13/19]\n"
+      "Final outputs will be generated in experiments/z_1000_FPS/17_full_build_json_mvau_rtl_mvau_wwidth_max_36_manual_folding_exp13/output_full_build\n",
+      "Build log is at experiments/z_1000_FPS/17_full_build_json_mvau_rtl_mvau_wwidth_max_36_manual_folding_exp13/output_full_build/build_dataflow.log\n",
+      "Running step: custom_step_tidy_up [1/18]\n",
+      "Running step: custom_step_add_pre_proc [2/18]\n",
+      "Running step: custom_step_streamline [3/18]\n",
+      "Running step: custom_step_convert_to_hw [4/18]\n",
+      "Running step: step_create_dataflow_partition [5/18]\n",
+      "Running step: custom_step_specialize_layers [6/18]\n",
+      "Running step: step_apply_folding_config [7/18]\n",
+      "Running step: step_minimize_bit_width [8/18]\n",
+      "Running step: step_generate_estimate_reports [9/18]\n",
+      "Running step: step_hw_codegen [10/18]\n",
+      "Running step: step_hw_ipgen [11/18]\n",
+      "Running step: step_set_fifo_depths [12/18]\n",
+      "Running step: step_create_stitched_ip [13/18]\n",
+      "Running step: step_measure_rtlsim_performance [14/18]\n",
+      "Running step: step_out_of_context_synthesis [15/18]\n"
      ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "Traceback (most recent call last):\n",
+      "  File \"/home/gmoreno/uav/finn/src/finn/builder/build_dataflow.py\", line 158, in build_dataflow_cfg\n",
+      "    model = transform_step(model, cfg)\n",
+      "  File \"/home/gmoreno/uav/finn/src/finn/builder/build_dataflow_steps.py\", line 767, in step_out_of_context_synthesis\n",
+      "    model = model.transform(\n",
+      "  File \"/home/gmoreno/uav/finn/deps/qonnx/src/qonnx/core/modelwrapper.py\", line 140, in transform\n",
+      "    (transformed_model, model_was_changed) = transformation.apply(transformed_model)\n",
+      "  File \"/home/gmoreno/uav/finn/src/finn/transformation/fpgadataflow/synth_ooc.py\", line 61, in apply\n",
+      "    ret = out_of_context_synth(\n",
+      "  File \"/home/gmoreno/uav/finn/src/finn/util/vivado.py\", line 66, in out_of_context_synth\n",
+      "    with open(res_counts_path, \"r\") as myfile:\n",
+      "FileNotFoundError: [Errno 2] No such file or directory: '/home/gmoreno/workspace/synth_out_of_context_6lzwn479/results_finn_design_wrapper/res.txt'\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "> \u001b[0;32m/home/gmoreno/uav/finn/src/finn/util/vivado.py\u001b[0m(66)\u001b[0;36mout_of_context_synth\u001b[0;34m()\u001b[0m\n",
+      "\u001b[0;32m     64 \u001b[0;31m    \u001b[0mres_counts_path\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mvivado_proj_folder\u001b[0m \u001b[0;34m+\u001b[0m \u001b[0;34m\"/res.txt\"\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
+      "\u001b[0m\u001b[0;32m     65 \u001b[0;31m\u001b[0;34m\u001b[0m\u001b[0m\n",
+      "\u001b[0m\u001b[0;32m---> 66 \u001b[0;31m    \u001b[0;32mwith\u001b[0m \u001b[0mopen\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mres_counts_path\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0;34m\"r\"\u001b[0m\u001b[0;34m)\u001b[0m \u001b[0;32mas\u001b[0m \u001b[0mmyfile\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
+      "\u001b[0m\u001b[0;32m     67 \u001b[0;31m        \u001b[0mres_data\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mmyfile\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mread\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0msplit\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m\"\\n\"\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
+      "\u001b[0m\u001b[0;32m     68 \u001b[0;31m    \u001b[0mret\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0;34m{\u001b[0m\u001b[0;34m}\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
+      "\u001b[0m\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "ipdb>  q\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Build failed\n",
+      "CPU times: user 5min 3s, sys: 50.2 s, total: 5min 54s\n",
+      "Wall time: 9h 41min 48s\n"
+     ]
+    },
+    {
+     "data": {
+      "text/plain": [
+       "-1"
+      ]
+     },
+     "execution_count": 35,
+     "metadata": {},
+     "output_type": "execute_result"
     }
    ],
    "source": [
