--- a/finn/notebooks/uav_finn/classification/my_mblnet_resnet_to_finn_driver/zip_driver.ipynb
+++ b/finn/notebooks/uav_finn/classification/my_mblnet_resnet_to_finn_driver/zip_driver.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 1,
    "id": "f2e5c82e-f1f9-41d3-99fa-2a6fe725ee33",
    "metadata": {},
    "outputs": [],
@@ -13,21 +13,21 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 2,
    "id": "768ed2a5-4f9d-401f-8c85-7aaf4a14cb60",
    "metadata": {},
    "outputs": [],
    "source": [
-    "deploy_file = ('./experiments'\n",
-    "               + '/400_FPS'\n",
-    "               + '/02_full_build_json_repeated_01'\n",
+    "deploy_file = ('./experiments_CLK'\n",
+    "               + '/30_FPS_CLK_200ns'\n",
+    "               + '/03_full_build_final_mvau_hls'\n",
     "               + '/output_full_build'\n",
     "               + '/deploy')"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 3,
    "id": "610aca67-740c-44e8-b626-80a697f53a67",
    "metadata": {},
    "outputs": [
@@ -45,23 +45,23 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 4,
    "id": "4a8789fd-5ecf-4f60-8afe-2661aa20c280",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "'/home/gmoreno/uav/finn/notebooks/uav_finn/classification/my_mblnet_resnet_to_finn_driver/400_FPS_deploy.zip'"
+       "'/home/gmoreno/uav/finn/notebooks/uav_finn/classification/my_mblnet_resnet_to_finn_driver/30_FPS_deploy.zip'"
       ]
      },
-     "execution_count": 6,
+     "execution_count": 4,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "shutil.make_archive('./400_FPS_deploy', 'zip', deploy_file)"
+    "shutil.make_archive('./30_FPS_deploy', 'zip', deploy_file)"
    ]
   },
   {
